Old project idea removed. New project idea started

--- a/project/index.html
+++ b/project/index.html
@@ -2,11 +2,15 @@
 <html>
     <head>
         <link rel="stylesheet" href="css/styles.css"> 
-        <h1>Welcome to [Insert Name Here]!</h1>
     </head>
-    <div class="boxed" float: right>Insert Description</div>
-    <div class="cloud" float: right></div>
     <body>
+        <h1>Welcome to [Insert Name Here]!</h1>
+        <div class='parent'>
+            <div class="boxed">Insert Description</div>
+            <div class="cloud">
+                <span>Hello</span>
+            </div>
+        </div>
         <img class="portrait" src="img/MiamiDolphin.png">
     </body>
 </html>
