Home page button linked to miami river page

--- a/project2/index.html
+++ b/project2/index.html
@@ -6,7 +6,12 @@
     <body>
         <h1>Welcome to [Insert Name Here]!</h1>
         <div class="box1 sb7">Hi! My name is [insert name here] and I will be your tour guide today. Come with me as I show you some historical landmarks here in the city of Miami. Along the way, you will encounter trivia questions about each place that we visit. Once you get them correct, you can uncover some fun facts!</div>
-        <!-- <div class="siteDescription" >Hi! My name is [insert name here] and I will be your tour guide today. <br> Come with me as I show you some historical landmarks here in the city of Miami. <br> Along the way, you will encounter trivia questions about each place that we visit. <br> Once you get them correct, you can uncover some fun facts!</div> -->
         <img class="portrait" src="img/tourist.png">
+        <button id="miamiRiver">Click me to go to the first location!</button>
+        <script>
+            document.querySelector('#miamiRiver').addEventListener('click', () => {
+                window.location.href = 'file:///C:/Users/dhruv/OneDrive/Desktop/Code/Code/Hackathon/project2/MiamiRiver.html';
+            })
+        </script>
     </body>
 </html>
