miami river page background and tour guide added

--- a/project2/MiamiRiver.html
+++ b/project2/MiamiRiver.html
@@ -3,7 +3,8 @@
     <head>
         <link rel="stylesheet" href="css/styles.css"> 
     </head>
-    <body>
-        <h1>Welcome to the Miami River!</h1>
+    <body class="riverBody">
+        <h1 class="riverHeader">Welcome to the Miami River!</h1>
+        <img class="portrait2" src="img/tourist.png">
     </body>
 </html>
