--- a/project2/index.html
+++ b/project2/index.html
@@ -3,10 +3,10 @@
     <head>
         <link rel="stylesheet" href="css/styles.css"> 
     </head>
-    <body>
-        <h1>Welcome to [Insert Name Here]!</h1>
+    <body class="homeBody">
+        <h1 class="homeHeader">Welcome to [Insert Name Here]!</h1>
         <div class="box1 sb7">Hi! My name is [insert name here] and I will be your tour guide today. Come with me as I show you some historical landmarks here in the city of Miami. Along the way, you will encounter trivia questions about each place that we visit. Once you get them correct, you can uncover some fun facts!</div>
-        <img class="portrait" src="img/tourist.png">
+        <img class="portrait1" src="img/tourist.png">
         <button id="miamiRiver">Click me to go to the first location!</button>
         <script>
             document.querySelector('#miamiRiver').addEventListener('click', () => {
