added hover box over tequesta image

--- a/project2/MiamiRiver.html
+++ b/project2/MiamiRiver.html
@@ -3,8 +3,14 @@
     <head>
         <link rel="stylesheet" href="css/styles.css"> 
     </head>
-    <body class="riverBody">
+    <body>
         <h1 class="riverHeader">Welcome to the Miami River!</h1>
         <img class="portrait2" src="img/tourist.png">
+        <a class="hideDisplay">
+            <img class="Tequesta" src="img/tequestaTribe.jpg" alt="symbol">
+            <span class="showDisplayOnHover">Heading
+                <span class="showBodyOfDisplayOnHover">Description Goes Here.</span>
+            </span>
+        </a>
     </body>
 </html>
