Added hover box and text for all 3 images. Fixed button position in home page

--- a/project2/MiamiRiver.html
+++ b/project2/MiamiRiver.html
@@ -3,14 +3,34 @@
     <head>
         <link rel="stylesheet" href="css/styles.css"> 
     </head>
-    <body>
+    <body class="riverBody">
         <h1 class="riverHeader">Welcome to the Miami River!</h1>
+        <div class="contain">
+            <div class="image-container" style="justify-content: center;">
+                <img src="img/JuliaTuttle.jpg" alt="Julia Tuttle">  
+                <div class="overlay">
+                    <h2>Julia Tuttle</h2>
+                    <p>The Miami river was where it all began. It was mostly swampland and had only 9 inhabitants. Julia Tuttle was one of those nine. She is known as the “Mother of Miami” because she pioneered the city into what it is today. She came to an agreement with Henry Flagler so he could bring his railroad down south. Which would open up the small town to the rest of the United States. 
+                    </p>
+                </div>
+            </div>
+            <div class="image-container">
+                <img src="img/tequestaTribe.jpg" alt="The Tequesta Tribe">
+                <div class="overlay">
+                    <h2>The Tequesta Tribe</h2>
+                    <p style="font-size: 16px">The Tequesta (tuh-kes-tuh) were one of the first tribes in South Florida and they lived along the Miami River. When the Spanish invaded Florida, they were very guarded but eventually befriended the Spanish. The Spanish had little regard for the tribe and the two later groups had great animosity towards one another. The Tequesta began to die off of illness, settlement disputes, and Spanish treatment of the people and by the 1800s there were few Tequesta left. Though they inhabited the land before Miami was established as a city, they are still a vital part of the history.
+                    </p>
+                </div>
+            </div>
+            <div class="image-container">
+                <img src="img/oldRiver.png" alt="Miami River in the Olden Days">
+                <div class="overlay">
+                    <h2>The Miami River</h2>
+                    <p style="font-size: 17px">The Miami River was originally a natural river and the original inhabitants were the Tequestas. With Spanish missions and the acquisition of Florida by Britain in 1765, the area was abandoned. Settlers began to be attracted to the area and to accommodate the settlers the river was dredged in 1849 in an act to drain the Everglades and make the area more inhabitable. The dredging became a major source of pollution within the river. Thankfully, there have been many efforts to improve the pollution situation over time.
+                    </p>
+                </div>
+            </div>
+        </div>
         <img class="portrait2" src="img/tourist.png">
-        <a class="hideDisplay">
-            <img class="Tequesta" src="img/tequestaTribe.jpg" alt="symbol">
-            <span class="showDisplayOnHover">Heading
-                <span class="showBodyOfDisplayOnHover">Description Goes Here.</span>
-            </span>
-        </a>
     </body>
 </html>
