completed royal palm page, added fun facts on the trivas

--- a/project2/MiamiRiver.html
+++ b/project2/MiamiRiver.html
@@ -161,7 +161,7 @@
                         }
                 
                         if (g == 1 && h == 1 && i == 1 ) {
-                            message001.innerHTML = "Congratulation! You have successfully finished this quiz.";
+                            message001.innerHTML = "Congratulations! You got all of the questions right! <br> <br> This calls for a fun fact: <br> <br> Did you know that at 5.5 miles long, the Miami River is the shortest, active river in the United States?";
                             disappear001.innerHTML = "";
                             reload001.innerHTML = "<div id=center001><button class=button001 onclick=repeat001()>Exit</button></div>";
                         }
