--- a/project2/index.html
+++ b/project2/index.html
@@ -5,11 +5,13 @@
     </head>
     <body class="homeBody">
         <h1 class="homeHeader">Welcome to [Insert Name Here]!</h1>
-        <div class="box1 sb7">Hi! My name is [insert name here] and I will be your tour guide today. Come with me as I show you some historical landmarks here in the city of Miami. Along the way, you will encounter trivia questions about each place that we visit. Once you get them correct, you can uncover some fun facts!</div>
+        <div class="box1 sb7">Hi! My name is Mia and I will be your tour guide today. Come with me as I show you some historical landmarks here in the city of Miami. Along the way, you will encounter trivia questions about each place that we visit. Once you get them correct, you can uncover some fun facts!</div>
         <div class="contain" style="width: 80%; justify-content: center" >
             <img class="tour-guide" src="img/tourist.png" style="margin-top: -5%">
             <button id="miamiRiver">Start the Tour!</button>
         </div>
+        <a href="https://www.miamiandbeaches.com/events/virtualmiami/virtual-miami-backgrounds" style="margin-left: 80%; font-size: 20px;">Image Reference Link - Background</a>
+        <a href="https://img.lovepik.com/element/40138/1462.png_300.png " style="margin-left: 80%; font-size: 20px;">Image Reference Link - Tour Guide</a>
         <script>
             document.querySelector('#miamiRiver').addEventListener('click', () => {
                 window.location.href = 'file:///C:/Users/dhruv/OneDrive/Desktop/Code/Code/Hackathon/project2/MiamiRiver.html';
