added background image reference link

--- a/project2/pages/MiamiRiver.html
+++ b/project2/pages/MiamiRiver.html
@@ -28,7 +28,6 @@
             /* Modal Content */
             .modal-content {
               background-color: rgb(207, 207, 207);
-              /* background-image: url(https://i.pinimg.com/originals/81/10/cf/8110cf5c35eee8582a9ac5f81362c13f.jpg); */
               background-size: cover;
               margin: auto;
               padding: 20px;
@@ -108,6 +107,7 @@
             <button id="myBtn" style="margin-left: 5%; margin-top: -5%">Click Here For Trivia!</button>
             <button id="royalPalm" style="margin-left: 5%; margin-top: -5%">On to the Next Location!</button>
         </div>
+        <a href="https://cdn.shopify.com/s/files/1/0071/2176/4403/products/spatial-toupe_grande.png?v=1618254947" style="margin-left: 83%; font-size: 14px">Image Reference Link - Background</a>
         <script>
             document.querySelector('#royalPalm').addEventListener('click', () => {
                 window.location.href = 'file:///C:/Users/dhruv/OneDrive/Desktop/Code/Code/Hackathon/project2/pages/royalPalm.html';
