changed website name

--- a/project2/index.html
+++ b/project2/index.html
@@ -7,7 +7,7 @@
     <body class="homeBody">
         <nav>
             <div class="heading">
-                <h4>Travel With Mia</h4>
+                <h4>Miami : Uncovered</h4>
             </div>
             <ul class="nav-links">
                 <li><a class="active" href="index.html">Home</a></li>
