--- a/project2/pages/about.html
+++ b/project2/pages/about.html
@@ -9,7 +9,7 @@
     <body class="riverBody">
         <nav>
             <div class="heading">
-                <h4>Navigation Bar</h4>
+                <h4>Miami : Uncovered</h4>
             </div>
             <ul class="nav-links">
                 <li><a href="../index.html">Home</a></li>
@@ -25,7 +25,7 @@
                 <img src="../img/dhruvi.jpg" alt="Dhruvi">  
                 <div class="overlay">
                     <h2 style="font-size: 50px">Dhruvi Shah</h2>
-                    <p style="font-size: 30px">She is pursuing a Bachelor's of Science in Computer Science at Florida State University. This is her first ever hackathon and she has really enjoyed working on this website! She is currently educating herself in the interest of becoming a successful software engineer.
+                    <p style="font-size: 37px">I am pursuing a Bachelor's of Science in Computer Science at Florida State University. This is my first ever hackathon and I has really enjoyed working on this website! I am currently educating herself in the interest of becoming a successful software engineer.
                     </p>
                 </div>
             </div>
@@ -33,13 +33,7 @@
                 <img src="../img/jacqui.jpg" alt="Jacqui">
                 <div class="overlay">
                     <h2 style="font-size: 50px">Jacquelyn Nogueras</h2>
-                    <p style="font-size: 17px">Royal Palm was one of the first hotels in the city of Miami, and there are more and more every day. Because of this hotel, tourism sparked and flourished in South Florida. Now, Miami is one of the most visited cities in the United States. 
-                        <br>
-                        <br>
-                        <h6>
-                            <a href="https://miami-history.com/end-of-miamis-royal-palm-hotel/">Image Reference Link</a>
-                        </h6>
-                    </p>
+                    <p style="font-size: 37px">I am a junior working towards getting a Bachelor’s of Science in Computer Science at Florida State University. This is my first time working with website development and also my first hackathon project! I am very excited for people to learn more about the history of Miami.</p>
                 </div>
             </div>
         </div>
