--- a/project2/pages/brickellTrading.html
+++ b/project2/pages/brickellTrading.html
@@ -57,7 +57,7 @@
     <body class="riverBody">
         <nav>
             <div class="heading">
-                <h4>Navigation Bar</h4>
+                <h4>Miami : Uncovered</h4>
             </div>
             <ul class="nav-links">
                 <li><a href="../index.html">Home</a></li>
